--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,43 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons>
+      <ion-icon size="large" name="basketball-outline"></ion-icon>
+    </ion-buttons>
+    <ion-title>Simple Apps</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Registration</ion-card-subtitle>
+      <ion-card-title>Simple Apps</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>Sebelum mnggunakan aplikasi ini silahkan anda melakukan registasi/pendaftaran pada form berikut ini</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="floating" type="text">Nama Lengkap</ion-label>
+        <ion-input [(ngModel)]="info.fullname" type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating" type="email">Email</ion-label>
+        <ion-input [(ngModel)]="info.email" type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating" type="email">Tanggal Lahir</ion-label>
+        <ion-datetime
+          value="2019-10-01T15:43:40.394Z" [(ngModel)]="info.dob" display-timezone="utc"></ion-datetime>
+      </ion-item>
+      <ion-button (click)="saveData()" expand="block" color="success">Submit</ion-button>
+      <ion-button color="warning" (click)="scorePage()" expand="block">Score Apps</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="secondary">
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
